# FindBT

./: .gitignore  QUICKSTART.md  README.md  SECURITY.md  clean-project.bat
.github/: dependabot.yml
.github/workflows/: actions-lint.yml  ci.yml  dependency-review.yml  release.yml
docs/: FAQ.md
rust-app/: Cargo.toml
rust-app/assets/icons/: FindBT.icns
rust-app/crates/findbt-app/: Cargo.toml  build.rs
rust-app/crates/findbt-app/src/: app.rs  main.rs  main_screen.rs  settings.rs  settings_screen.rs  theme.rs  titlebar.rs  widgets.rs  wizard.rs
rust-app/crates/findbt-backend/: Cargo.toml
rust-app/crates/findbt-backend/src/: lib.rs  macos.rs  mock.rs  windows.rs
rust-app/crates/findbt-core/: Cargo.toml
rust-app/crates/findbt-core/src/: lib.rs  models.rs  pdf.rs  registry.rs  report.rs  session.rs
rust-app/macos/: Info.plist
rust-app/scripts/: build-macos-app.sh  build-windows-app.ps1  package-macos.sh  package-windows.ps1
rust-app/windows/: FindBT.wxs
scripts/: invoke-windows-defender-scan.ps1
